# Chess

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  run_single_game.sh
Network/: MainServer.cpp  OuterClient.cpp
include/: App.h  Bishop.h  Board.h  Enums.h  Figure.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  Square.h
other/: TO DO  testBoards.txt
src/: App.cpp  Bishop.cpp  Board.cpp  Figure.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  Square.cpp
web/: a.out  app.py  client_example.py  server_example.cpp
web/static/: chess.js  style.css
web/templates/: board.html  chess.js  index.html
